solution_helm/istio-cas-ingress/templates/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: tls-gateway
  namespace: default  # Must be in same namespace as your ingressgateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: example-cert-tls  # Must match your secret name
      hosts:
        - "example.com"  # Must match your certificate's DNS name
